# gargoyle

./: cabal.project  default.nix  shell.nix
.ci/: default.nix
gargoyle-redis/: gargoyle-redis.cabal
gargoyle-redis-connect/: cabal.project  gargoyle-redis-connect.cabal
gargoyle-redis-connect/src/Gargoyle/Redis/: Connect.hs
gargoyle-redis-nix/: cabal.project  gargoyle-redis-nix.cabal
gargoyle-redis-nix/src-bin/: gargoyle-nix-redis-cli.hs  gargoyle-nix-redis-monitor.hs  gargoyle-nix-redis-run.hs
gargoyle-redis-nix/src/Gargoyle/Redis/: Nix.hs
gargoyle-redis/src-bin/: gargoyle-redis-cli.hs  gargoyle-redis-monitor.hs  gargoyle-redis-run.hs
gargoyle-redis/src/Gargoyle/: Redis.hs
gargoyle-redis/tests/: gargoyle-redis-test.hs
