name:               gargoyle-redis-connect
version:            0.1.0.1
author:             Dave Laing
maintainer:         dave.laing.80@gmail.com
copyright:          Copyright (C) 2023 Dave Laing
license:            BSD3
license-file:       LICENSE
build-type:         Simple
cabal-version:      >=1.10
synopsis:           Connect to gargoyle-managed redis instances
category:           System
description:        A convenience utility for connecting to a redis instance managed by gargoyle.

library
  exposed-modules:  Gargoyle.Redis.Connect
  ghc-options:      -Wall
  ghc-prof-options: -fprof-auto-exported
  build-depends:
      base                     >=4.12  && <4.17
    , bytestring               >=0.10  && <0.12
    , directory                >=1.3   && <1.4
    , gargoyle                 >=0.1.1.0 && < 0.2
    , gargoyle-redis           >=0.2.0.1 && < 0.3
    , gargoyle-redis-nix       >=0.3.0.0 && < 0.4
    , hedis                    >=0.15   && <0.16

  hs-source-dirs:   src
  default-language: Haskell2010
